支持同步返回消息

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ SmartRoute/src/SmartRoute.NodeTest/obj/
 SmartRoute/src/SmartRoute.NodeTest/bin/
 SmartRoute/src/SmartRoute.NodeTest.Messages/bin/
 SmartRoute/src/SmartRoute.NodeTest.Messages/obj/
+SmartRoute/src/SmartRoute.SyncPublishTest/bin/
+SmartRoute/src/SmartRoute.SyncPublishTest/obj/
