--- a/SmartRoute/src/SmartRoute/project.json
+++ b/SmartRoute/src/SmartRoute/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.5.2-*",
+  "version": "0.6.2-*",
   "dependencies": {
     "BeetleX": "0.8.6",
     "NETStandard.Library": "1.6.0",
@@ -9,7 +9,8 @@
     "System.Threading.ThreadPool": "4.0.10",
     "Microsoft.NETCore.Portable.Compatibility": "1.0.0",
     "System.Net.NetworkInformation": "4.1.0",
-    "System.Runtime.Extensions": "4.1.0"
+    "System.Runtime.Extensions": "4.1.0",
+    "System.Reflection.TypeExtensions": "4.3.0"
   },
   "frameworks": {
     "netstandard1.6": {
