--- a/SmartRoute/src/SmartRoute/project.json
+++ b/SmartRoute/src/SmartRoute/project.json
@@ -1,7 +1,6 @@
 {
   "version": "0.6.2-*",
   "dependencies": {
-    "BeetleX": "0.8.6",
     "NETStandard.Library": "1.6.0",
     "protobuf-net": "2.1.0",
     "System.Net.NameResolution": "4.0.0",
@@ -10,10 +9,11 @@
     "Microsoft.NETCore.Portable.Compatibility": "1.0.0",
     "System.Net.NetworkInformation": "4.1.0",
     "System.Runtime.Extensions": "4.1.0",
-    "System.Reflection.TypeExtensions": "4.3.0"
+    "System.Reflection.TypeExtensions": "4.3.0",
+    "BeetleX": "0.8.8"
   },
   "frameworks": {
-    "netstandard1.6": {
+    "netstandard1.5": {
       "imports": "dnxcore50"
     }
   },
